timer centered and right side overflow solved
timer for mobile is centered and right side extra sliding on mobile solved.

--- a/css/footer.css
+++ b/css/footer.css
@@ -297,6 +297,6 @@ body {
   }
 
   .footer {
-    width: 101%;
+    width: 100%;
   }
 }
