--- a/css/guests.css
+++ b/css/guests.css
@@ -5,12 +5,12 @@ body {
     rgb(26, 1, 46) 99.4%
   );
 }
-.no-scroll{
-  overflow:hidden;
+.no-scroll {
+  overflow: hidden;
 }
-html{
+html {
   scroll-behavior: smooth;
-  transition-duration: 5s ;
+  transition-duration: 5s;
 }
 
 #testimonial_area {
@@ -24,8 +24,8 @@ html{
   position: relative;
   text-align: center;
   display: block;
-/*   background: rgba(20, 20, 20, 0.986); */
-  background: radial-gradient(#130F40 0%, #010102);
+  /*   background: rgba(20, 20, 20, 0.986); */
+  background: radial-gradient(#130f40 0%, #010102);
   /* background-image:  radial-gradient(circle at 24.1% 68.8%,  #000000 0%,  #130F40 99%); */
   color: #000;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -69,7 +69,6 @@ html{
   color: silver;
   font-weight: 300;
   font-size: 13px;
-  
 }
 
 .box-area .img-area {
@@ -141,20 +140,12 @@ padding: : 500px;
   }
 } */
 
-@media only screen and (max-width: 767px) {
-  .box-area {
-    text-align: center;
-  }
 
-  .owl-nav {
-    display: none;
-  }
-}
 
 .guest {
   margin-right: 10vw;
   background: rgba(0, 0, 0, 0);
-  font-family: 'Poppins',sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .guest h1 {
@@ -179,7 +170,6 @@ padding: : 500px;
 }
 
 @media only screen and (max-width: 767px) {
-  
   .box-area {
     text-align: center;
   }
@@ -199,15 +189,30 @@ padding: : 500px;
   }
 }
 
-
-@media (min-width: 1300px){
-  .guest .container .row{
+@media (min-width: 1300px) {
+  .guest .container .row {
     margin-right: 3.6rem;
   }
 }
 
-@media (min-width:800px){
-  .adityaarora{
+@media (min-width: 800px) {
+  .adityaarora {
     margin-right: 28vw;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .box-area {
+    text-align: center;
+  }
+
+  .owl-nav {
+    display: none;
+  }
+  .row {
+    margin: auto;
+  }
+  .guest {
+    margin: auto;
   }
 }
